Adicionado um estilo podre + media queries

--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <title>Currículo</title>
 </head>
-<body>
 
+<body>
     <div class="container">
         <h1 class="titles">Currículo</h1>
 
     <div class="container-img">
-        <img src="https://avatars.githubusercontent.com/u/71087163?v=4" alt="Foto de Isaias" class="img">
+        <div class="border-grad">
+            <img src="https://avatars.githubusercontent.com/u/71087163?v=4" alt="Foto de Isaias" class="img">
+        </div>
+        
     </div>
 
     <h2 class="subtitles">Informações Pessoais</h2>
@@ -24,6 +27,7 @@
     <div class="dados">
         <p>Nome: Isaias Gomes</p>
         <p>Endereço: Rua Inexistente 277</p>
+        <p>Telefone: (87) 9 9999-9999</p>
     </div>
 
     <h2 class="subtitles">Formação</h2>
@@ -42,7 +46,7 @@
        </div>
     </div>
 
-    <h2 class="subtitles">Formaçâo Complementar</h2>
+    <h2 class="subtitles">Formação Complementar</h2>
 
     <div class="dados">
         <div class="area">
@@ -58,6 +62,13 @@
             <li>Comunicação</li>
         </ul>
         
+        <h2 class="subtitles">Informações Adicionais</h2>
+
+        <div class="dados">
+            <div class="area">
+                <p class="big">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque tempore doloribus, nemo suscipit sint! Consequuntur optio sapiente distinctio, minima blanditiis pariatur! Mollitia deleniti magni repellat quia at quod autem!</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
